# obi

./: OBI_SDK_Executive_Summary.docx  Ontological Bayesian Intelligence Architecture - Software Development Kit.md  README.md  environment.yml  setup.py  ~$I_SDK_Executive_Summary.docx
.claude/: settings.local.json
bindings/cython/: _core.pyx
conda-recipe/: build.sh
docs/: Consciousness is not a state to simulate.md  DIRAM Boolean Logic Truth Table.md  Dimensional Game Theory - Fault-T.md  Epistemic Continuity Analysis OBINexus.txt  Formal Math Function Reasoning System.md  Hierarchical Actor-Orchestrated.md  OBINexus Framework Safety-Critical.md  PhD Roadmap — OBICall Polyglot System.txt
obi/: __init__.py
obi-sdk/: pyproject.toml  setup.py
obi-sdk/bindings/cython/: libpolycall.pxd
obi-sdk/conda-recipe/: bld.bat  meta.yaml
obi-sdk/docs/: A Bayesian Network Framework.md  AEGIS-PROOF-3.1 & 3.2 Mathematica.md  AEGIS-PROOF-4.1 Computational.md  Conceptual Symbolic Language Layer (CSL).md  Confio Zero-Trust Authentication System.md  DAG Cost Function and Ephemeris.md  Data Drift Mitigation for a Polyglot.md  Dimensional Evolution Filterion.md  Dimensional Game Theory Variadic.md  EATV Stream Integration into OBINexus.md  Formal Analysis of Game Theory for Algorithm AND uncertiany.md  Formal Analysis of Game Theory.md  Formal Argument for Bias in AI System.txt  Formal Argument for Bias in AI Systen.md  Formal Verification of Traversal.md  Subjective Symbolic Cognition A Mul.md  Unified OBIAI Specification Document for GitHub Repository Integration.md  Unified Quantum-Classical Bridge.md  Why Everyone Else Is Wrong A Tech.txt
obi-sdk/scripts/: build.sh  build_windows.bat  install.sh
obi-sdk/sdk/: __init__.py
obi-sdk/sdk/core/: context.py
obi-sdk/tests/: conftest.py  test_context.py  test_inference.py
obi/bindings/: __init__.py
obi/bindings/c/: __init__.py
obi/bindings/cython/: __init__.py  _core.pyx
obi/drivers/: __init__.py
obi/drivers/core/: __init__.py  _poly_driver.pyx
obi/extension/: __init__.py
obi/extension/c/: __init__.py
obi/extension/cython/: __init__.py
obi/misc/: __init__.py
obi/plugins/: __init__.py
obi/plugins/c/: __init__.py
obi/sdk/: __init__.py
scripts/: __init__.py  build_cython.py  build_dag.py  scaffold_structure.py
sdk/core/: inference.py
transcripts/: CompleteSystemAmandfmminflationandedefualtofchannelfereqeucy (1).txt  NSIGII Trident Polling Compute Probe Calibration ZKP Setup.txt
(+3 files in other folders)
